Se cambia nombre del grupo

--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
 
                     <div class="mastfoot">
                         <div class="inner">
-                            <p>Grupo 1</p>
+                            <p>Grupo EECC</p>
                         </div>
                     </div>
 
