Envio Comunicacion a apoderado Responder comunicacion (ambos perfiles) ver detalle comunicaion (lupa) (ambos perfiles)
1- cambios css login.jsp y index.html 
2- al enviar una comunicación, "confirmar como envió exitoso"
3- al agregar (curso o profesor o matricula), "confirmar como registro ingresado exitosamente"

Cambiar tipo de dato de "Int a String" a tabla Detallecomunicacion
	Campos: Emisor y Destinatario

--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
 
                     <div class="mastfoot">
                         <div class="inner">
-                            <p>Grupo EECC</p>
+                            <p>&copy; EECC 2014</p>
                         </div>
                     </div>
 
